[package]
name = "VaultAPI-Client"
version = "0.1.0"
edition = "2021"

[lib]
name = "vaultapi"
path = "src/lib.rs"

[[bin]]
name = "vaultapi"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
dotenv = "0.15.0"
ring = "0.17.8"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
