[package]
name = "VaultAPI-Client"
version = "0.1.0"
edition = "2021"

[lib]
name = "vaultapi"
path = "src/lib.rs"

[[bin]]
name = "vaultapi"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.5"
aes-gcm = "0.10.0"
base64 = "0.21.0"
sha2 = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17.8"
digest = "0.10.7"
aead = "0.5.2"
dotenv = "0.15.0"
log = "0.4.22"
